[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "homeassistant-wiener-luft"
version = "0.5.1"
description = "Community-maintained Home Assistant integration for Vienna's public air-quality and weather measurements."
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
authors = [{ name = "Alex Ostleitner" }]
keywords = ["home-assistant", "wien", "air-quality", "weather"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Home Automation",
]
urls = { "Homepage" = "https://github.com/alexostleitner/homeassistant-wiener-luft", "Issues" = "https://github.com/alexostleitner/homeassistant-wiener-luft/issues" }
dependencies = []

[dependency-groups]
dev = [
    "basedpyright>=1.39.9",
    "complexipy>=6.0.1",
    "coverage>=7.6",
    "ruff>=0.15.19",
    "vulture>=2.16",
]

[tool.basedpyright]
typeCheckingMode = "basic"

[[tool.basedpyright.executionEnvironments]]
root = "tests"
extraPaths = ["."]
reportArgumentType = "none"
reportAttributeAccessIssue = "none"
reportOptionalMemberAccess = "none"
reportTypedDictNotRequiredAccess = "none"

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "C90", "SIM", "RUF", "PERF"]

[tool.ruff.lint.mccabe]
max-complexity = 6

[tool.vulture]
exclude = ["tests/homeassistant_stubs.py"]
ignore_names = ["VERSION", "async_get_options_flow", "_attr_*", "_config_entry"]

[tool.setuptools.packages.find]
include = ["custom_components*"]
namespaces = true
